--- a/stylesheets/media-queries.css
+++ b/stylesheets/media-queries.css
@@ -52,6 +52,13 @@
     .quote-img img {
         height: 800px;     
     }
+    .samfunnsviterneFordeler {
+        margin-left: 15px;
+        padding: 35px;
+    }
+    h4#singleFordel {
+        margin-left: 15px;
+    }
 }
 
 /* ============================= */
@@ -92,6 +99,9 @@
     .magText p#content,
     .magText h2#title{
         color: white;
+    }
+    .sosialBox {
+        margin-top: 75px;
     }
 }
 
